fix align for username-rule in AAQ-register

--- a/media/less/questions.less
+++ b/media/less/questions.less
@@ -779,7 +779,7 @@ h2 {
   }
 }
 
-#password-rules {
+#username-rules, #password-rules {
   font-size: 85%;
   margin: 5px 0 0 140px;
   text-align: left;
